# like-aho-corasick-but-different

./: Cargo.toml  README.md
benches/: simple_bench.rs
src/: ahocorasick.rs  automaton.rs  lib.rs  nfa.rs  state_id.rs  unicode_tables.rs  word_split_trait.rs
src/unicode_tables/: perl_word.rs
