[package]
name = "like-aho-corasick-but-different"
version = "0.1.4-owned"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.3.0"

[dev-dependencies]
criterion = "0.2.11"
rand = "0.6.5"
regex = "1.1.7"

[[bench]]
name = "simple_bench"
harness = false
