[package]
name = "like-aho-corasick-but-different"
version = "0.2.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2.11"
rand = "0.6.5"
regex = "1.1.7"

[[bench]]
name = "simple_bench"
harness = false
