[package]
name = "like-aho-corasick-but-different"
version = "0.2.5"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.2.11"
rand = "0.6.5"
regex = "1.1.7"

[[bench]]
name = "simple_bench"
harness = false

[lib]
name = "lacbd"
path = "src/lib.rs"

[[bin]]
name = "lacbd_bin"
path = "src/main.rs"
